[package]
name = "rfb-cli"
version = "0.1.0"
edition = "2021"
authors = ["Naim Hussain <muhdnaimhussain@gmail.com>"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
dotenvy = "0.15"
colored = "2.0"
base64 = "0.21"
